wp-content/themes/eugenemagazine/includes/css/style.css
/* ... */
.cover-header .align-right {
	text-align: right
}

.cover-header .align-center {
	text-align: center
}

.cover-header .align-left {
	text-align: left
}

.cover-header .cover-panel.align-right {
	float: right
}

.cover-header .cover-panel.align-center {
	float: none;
	margin-left: auto;
	margin-right: auto;
}

.cover-header .cover-panel.align-left {
	float: left
}

.cover-title h2 {
	font-family: Cataneo, Helvetica, Arial, sans-serif;
	font-weight: 500;
	font-size: 64px;
	line-height: 1;
	margin: 0 0 20px;
	text-transform: none;
}

.cover-subtitle h3 {
	font-family: gill-sans-nova, Helvetica, Arial, sans-serif;
	font-weight: 300;
	font-size: 32px;
	line-height: 1;
	margin: 0;
}

.cover-button {
	margin-top: 12px
}

/* posts */
.post {
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	width: 32%;
	height: 235px;
	float: left;
	position: relative;
	margin: 0 2% 0 0;
}

.post:nth-child(3n) {
	margin-right: 0;
}

.post a {
	color: inherit;
	position: relative;
	z-index: 1;
}

.overlay {
	position: absolute;
	background: rgba(0, 0, 0, .6);
	bottom: 0;
	width: 100%;
	color: #fff;
	padding: 12px;
}

.home-dept-row a, .post a {
	display: block;
	position: relative;
	height: 100%;
	width: 100%;
}

.overlay h3 {
	margin: 0;
	font-family: HelveticaBlack, Helvetica, Arial, sans-serif;
	font-weight: 900;
	text-transform: uppercase;
	font-size: 15px;
	line-height: 1.2;
}

.overlay span.overlay-subtitle {
	font-weight: 300;
	font-family: gill-sans-nova, Helvetica, Arial, sans-serif;
	text-transform: none;
	display: block;
}

.overlay .subtitle {
	font-family: gill-sans-nova, Helvetica, Arial, sans-serif;
	margin: 0;
	font-weight: 300;
	font-size: 30px;
}

.overlay .readmore {
	margin: 10px 0 6px 0;
	color: #000;
}

.header-post {
	width: 100%;
	height: 650px;
	margin: 0;
	float: none;
	max-height: 60vh;
	min-height: 240px;
}

#header .header-post {
	overflow: hidden;
}

/*
.first-header-post {
	overflow: hidden;
}*/
.header-post .narrow {
	height: 100%;
	padding: 30px 15px 0;
}

.header-post .category-header {
	font-family: BlissLight, Helvetica, Arial, sans-serif;
	font-weight: 300;
	text-transform: uppercase;
	letter-spacing: 2px;
	display: table;
	white-space: nowrap;
	font-size: 36px;
	padding: 0 10px 0 60px;
	margin: 0;
}

.header-post .category-header:before, .header-post .category-header:after {
	border-top: 2px solid;
	content: '';
	position: relative;
	top: .5em;
}

.header-post .category-header:before {
	display: block;
	width: 50px;
	right: 60px;
}

.header-post .category-header:after {
	display: table-cell;
	width: 100%;
	left: 10px;
}

.header-post h2 + a {
	position: absolute;
	height: auto;
	bottom: 0;
    right: 0;
    left: 75px;
}

.header-post .overlay {
	font-size: 16px;
	padding: 18px 20px 12px;
}

@media ( min-width: 960px ) {
	.header-post .overlay {
		max-width: 600px;
	    width: 100%;
	}
}

.header-post .overlay h3 {
	font-size: 24px;
	overflow: hidden;
	margin-bottom: 2px;
}

/* homepage */
.home .home-cover-row {
	padding: 0 0 40px;
	overflow: hidden;
}

.home-cover-row h2 {
	font-family: BlissLight, Helvetica, Arial, sans-serif;
	font-weight: 300;
	text-transform: uppercase;
	font-size: 36px;
}

.cover-post h3 {
	font-size: 16px
}

.home-dept-row {
	overflow: hidden;
	padding: 10px 0;
}

.home .header-post {
	width: calc(85% - 170px);
	height: 490px;
	padding: 20px 0 0;
	float: left;
	max-height: none;
}

.home-header-post-wrapper {
	float: right;
	width: 890px;
	margin-right: 20px;
}

.home-header-post-wrapper .category-header {
	margin-left: -60px;
}

.home-dept-row .post + .post {
	width: calc(150px + 15%);
	margin: 0 0 20px 20px;
}

.home-dept-row .post:last-child {
	margin-bottom: 0
}

@media (max-width: 1400px) {
	.home-header-post-wrapper {
		width: auto;
		float: none;
		margin: 0 15px;
		height: 100%;
	}

	.home-header-post-wrapper .category-header {
		margin-left: 0;
	}
}

/* dept archives */
.category header, .post-type-archive-weekender header {
	margin: 0 0 20px
}

.category article, .post-type-archive-weekender article {
	margin-bottom: 20px
}

/* individual post */
.single header.post {
	float: none
}

.single .column-wrapper {
	width: 100%;
}

.single .main-column {
	vertical-align: top;
	width: 100%;
	max-width: calc(100% - 300px);
	float: left;
}

.single .sidebar {
	width: 300px;
	float: left;
	padding: 30px 0 20px 40px;
}

.single .sidebar .ld-ad {
	margin: 0 0 10px;
}

.single .post-header {
	transform: translate(0, -100%);
	margin-top: 1px;
	position: absolute;
	background: #fff;
	padding: 10px 15px 0;
	margin-left: -15px;
	max-height: 260px;
	overflow-y: auto;
	width: calc(100%);
}

.single .post-content {
	padding: 1em 0
}

.single .post-header h2 {
	margin: 0;
	font-family: HelveticaBlack, Helvetica, Arial, sans-serif;
	font-weight: 900;
	text-transform: uppercase;
	font-size: 24px;
	line-height: 1.2;
}

.single .subtitle {
	margin: 5px 0;
	font-family: BookmanOldStyleStd, Georgia, Times, "Times New Roman", serif;
	font-weight: 400;
	text-transform: uppercase;
	font-size: 30px;
	width: 100%;
}

.single .post-related {
	margin: 0 0 30px;
	overflow: hidden;
}

.single .post-comments {
	margin: 0 0 30px;
}

/* Post headers with mobile image alt */
.cover-image-mobile-alt {
	height: 100%;
	background: center no-repeat;
	background-size: cover;
}

@media ( min-width: 769px ) {
	.cover-image-mobile-alt {
		background-image: none !important;
	}
}

@media ( max-width: 768px ) {
	.header-post.has-mobile-alt {
		background-image: none !important;
	}
}

/* newsletter widget */
.newsletter-submit-tip {
	display: block;
	font-size: 14px;
	margin-top: 5px;
}

/* fb widget */
.widget_facebookwidget {
	margin: 20px 0;
}

/* social sharing */
.social-sharing {
	float: right;
	margin: -2px 0 0 20px;
	font-style: italic;
	font-size: 14px;
}

.social-sharing a .share-text {
	position: absolute;
	left: -10000px;
	top: auto;
	width: 1px;
	height: 1px;
	overflow: hidden;
}
/* ... */

